Closed
Bug 431081
Opened 17 years ago
Closed 17 years ago
Native selection box contents missing in Firefox 3 - Vista only?
Categories
(Core :: Widget: Win32, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: magicrisco, Assigned: vlad)
References
()
Details
(Keywords: regression)
Attachments
(3 files)
267.31 KB,
image/jpeg
|
Details | |
1.53 KB,
patch
|
roc
:
review+
roc
:
superreview+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
1.14 KB,
text/html
|
Details |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9pre) Gecko/2008042705 Firefox
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9pre) Gecko/2008042705 Firefox
Browse to the supplied url and the selection boxes are missing, the arrow is there but the words such as "product type" are missing.
Reproducible: Always
Steps to Reproduce:
1. Navigate to http://www.logitech.com/index.cfm/support_downloads/downloads/
Actual Results:
Selection box contents are missing
Expected Results:
Selection contents should not be missing.
I think this might be a vista specific issue based on feedback from this thread http://forums.mozillazine.org/viewtopic.php?t=651734
Keywords: regression
Version: unspecified → Trunk
Comment 2•17 years ago
|
||
I can confirm, those selection boxes are not visible, though they seem to be there by right clicking in them, a little confusing....
Vista Ultimate 64bit
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9pre) Gecko/2008042705 Minefield/3.0pre Firefox/3.0 ID:2008042705
Ok, got a regression range:
Works:
http://hourly-archive.localgho.st/win32/20080425_1432_firefox-3.0pre.en-US.win32.zip
Fails:
http://hourly-archive.localgho.st/win32/20080425_1624_firefox-3.0pre.en-US.win32.zip
So must be bug 427122.
I have set a dependency on this and request blocking FF3.
Depends on: 427122
Flags: blocking-firefox3?
Updated•17 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee | ||
Comment 4•17 years ago
|
||
Well, ok; I don't know what to do here. For the controls to be drawn correctly, they need padding. Because our native theme system is a little broken, it can only ever override padding -- it can't adjust author specified padding. The patch in bug 427122 doesn't muck with padding if the author has specified it; on that page, there is explicit padding of 0px.
Assignee: nobody → vladimir
Component: General → Widget: Win32
Flags: blocking-firefox3?
Product: Firefox → Core
Assignee | ||
Updated•17 years ago
|
Flags: blocking1.9+
Updated•17 years ago
|
QA Contact: general → win32
Assignee | ||
Comment 5•17 years ago
|
||
Ok, so this is the PaintFocus problem again. What's happening is that if there's no padding, the focus rectangle painted by nsComboboxControlFrame::PaintFocus is being painted directly over the combobox border. I tried to get rid of this in another patch, but I think we'll need to actually do it... reftests all pass, is there any possible reason for this to actually be here? Elements should already have the background color painted/element repainted if focus goes away, so it's not that...
Attachment #318237 -
Flags: review?(roc)
Comment on attachment 318237 [details] [diff] [review]
don't draw background-coloured line in PaintFocus
The code was added in bug 32920 to "erase" the focus rect. I think that's entirely bogus; when the frame loses focus it will be repainted and the focus rect will go away on its own.
Having said that, given the stage of the release, please test all combinations of disabled/focused comboboxes on all 3 platforms plus classic and Luna on XP, if you can.
Attachment #318237 -
Flags: superreview+
Attachment #318237 -
Flags: review?(roc)
Attachment #318237 -
Flags: review+
Assignee | ||
Comment 7•17 years ago
|
||
Comment on attachment 318237 [details] [diff] [review]
don't draw background-coloured line in PaintFocus
Tested on all 3 platforms -- turns out that Cocoa and Gtk2 don't use this code at all, their native theme impls draw focus rectangles for dropdowns natively.
With an explicitly set background (so we get xpwidgets), things look the same, except for "background: transparent" -- without this patch, there's a white border when the widget is unfocused, and it goes away correctly. So I think this is good to go.
Attachment #318237 -
Flags: approval1.9?
Assignee | ||
Comment 8•17 years ago
|
||
Comment 9•17 years ago
|
||
Comment on attachment 318237 [details] [diff] [review]
don't draw background-coloured line in PaintFocus
a1.9=beltzner
Attachment #318237 -
Flags: approval1.9? → approval1.9+
Assignee | ||
Comment 10•17 years ago
|
||
Checking in layout/forms/nsComboboxControlFrame.cpp;
/cvsroot/mozilla/layout/forms/nsComboboxControlFrame.cpp,v <-- nsComboboxControlFrame.cpp
new revision: 1.431; previous revision: 1.430
done
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Comment 11•17 years ago
|
||
verified fixed using Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9pre) Gecko/2008042906 Minefield/3.0pre.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•