b=431081; native selection box frame missing in fx3 - vista content only; r+sr=roc,a=beltzner